--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.1",
+    "swiper-react": "^1.0.0",
     "tailwindcss-animate": "^1.0.7",
     "taos": "^1.0.5"
   },
